# drust

./: DESCRIPTION  Makefile  NAMESPACE  README.md  main.R
R/: extendr-wrappers.R  misc.R
man/: execute_lr.Rd  return_df.Rd
src/: Makevars
src/rust/: Cargo.toml
src/rust/src/: lib.rs  rpo_convert.rs
src/rust/src/drust/: mod.rs
src/rust/src/pipeline/: mod.rs
