[package]
name = 'rustr'
version = '0.1.0'
edition = '2018'

[lib]
crate-type = [ 'staticlib' ]

[dependencies]
rand = '0.8.4'
serde = "1.0.132"
serde_json = "1.0.73"
polars = "0.14.2"
polars-core = {version = "0.14.2", features=["ndarray"]}
arrow = "4.3.0"
smartcore = "0.2.0"
serde_derive = "1.0.126"
time = "*"
extendr-engine = { git = "https://github.com/extendr/extendr.git" }
extendr-api = { git = "https://github.com/extendr/extendr.git" }
ndarray = "0.15.4"